syntax = "proto3";

package calculator;

option go_package = "./orderService;order";

service OrderCreater {
  rpc Create (OrderRequest) returns (OrderResponse);
  rpc Status (OrderID) returns (OrderStatus);
}

message OrderID {
    int32 OrderID = 1;
}

message OrderStatus {
    string Status = 1;
}

message OrderRequest {
  int32 clientID = 1;
  repeated string dishes = 2;
}

message OrderResponse {
  int32 orderID = 1;
}
